--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -83,6 +83,9 @@ collections:
         name: "home"
         file: "src/_data/frontpage.yaml"
         fields:
+         - {label: "Meta Info", name: metainfo, widget: object, fields: [
+              { label: Page Title, name: title, widget: "string" },
+              { label: Page Description, name: description, widget: "string" }]}
           - {label: "Top Section", name: topsection, widget: object, fields: [
               { label: Title, name: title, widget: "string" },
               { label: Subtitle, name: subtitle, widget: "string"},
