--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -84,8 +84,8 @@ collections:
         file: "src/_data/frontpage.yaml"
         fields:
           - {label: "Meta Info", name: metainfo, widget: object, fields: [
-              { label: Page Title, name: title, widget: "string" },
-              { label: Page Description, name: description, widget: "string" }]}
+              { label: Page Title, name: pageTitle, widget: "string" },
+              { label: Page Description, name: pageDescription, widget: "string" }]}
           - {label: "Top Section", name: topsection, widget: object, fields: [
               { label: Title, name: title, widget: "string" },
               { label: Subtitle, name: subtitle, widget: "string"},
