Update Pages “home”

--- a/src/_data/frontpage.yaml
+++ b/src/_data/frontpage.yaml
@@ -1,6 +1,8 @@
 metainfo:
   title: Home
   description: Page meta description
+title: Test
+desc: meta
 topsection:
   title: Lorem ipsum
   subtitle: lorem ipsum
