--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -84,7 +84,7 @@ collections:
         file: "src/_data/frontpage.yaml"
         fields:
           - { label: Title, name: title, widget: string }
-          - { label: Description, name: desc, widget: string }
+          - { label: Description, name: description, widget: string }
           - {label: "Top Section", name: topsection, widget: object, fields: [
               { label: Title, name: title, widget: "string" },
               { label: Subtitle, name: subtitle, widget: "string"},
