--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -88,7 +88,7 @@ collections:
           - {label: "Top Section", name: topsection, widget: object, fields: [
               { label: Title, name: title, widget: "string" },
               { label: Subtitle, name: subtitle, widget: "string"},
-              { label: Image, name: image, widget: "image"}]},
+              { label: Image, name: image, widget: "image"},
               { label: Image Alt Text, name: alt, widget: "string"}]}
 
           - {label: "Extra", name: extra, widget: object, summary: "Extra options", fields: [
