Update Pages “home”

--- a/src/_data/frontpage.yaml
+++ b/src/_data/frontpage.yaml
@@ -4,5 +4,6 @@ topsection:
   title: Lorem ipsum
   subtitle: lorem ipsum
   image: https://tender-poitras-0df16e.netlify.app/img/about-jumbotron.jpg
+  alt: Man working
 extra:
   quicklinks: true
