--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -54,6 +54,9 @@ collections:
           - { label: Name, name: name, widget: string }
           - { label: Author, name: author, widget: string }
           - { label: URL, name: url, widget: string }
+          - { label: "SEO", name: SEO, widget: object, fields: [
+              { label: Site Name, name: site_name, summary: "It is displayed in Meta Page Title", widget: "string" },
+              { label: Separator, name: separator, summary: "Separator between Page name and Site Name in Meta Page Title", widget: "string"}]}
   # Blog
   - label: "Blog"
     name: "blog"
